...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="ur5-7r-ccf" id="KHm-Jd-idZ"/>
                            <outlet property="delegate" destination="ur5-7r-ccf" id="8fb-yM-yhx"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Plants" id="9E5-dW-XSd">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8Gk-lF-yUN">
                            <connections>
                                <segue destination="IgF-hs-O9X" kind="show" identifier="AddPlantSegue" id="iLQ-Gr-htp"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ml2-XT-Ixq">
                                <rect key="frame" x="8" y="148" width="398" height="542.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Plant Nickname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SMj-IA-vTm">
                                        <rect key="frame" x="0.0" y="0.0" width="398" height="30.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Plant Species (optional)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyU-iZ-Spl">
                                        <rect key="frame" x="0.0" y="50.5" width="398" height="25.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Watering Frequency (in days)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8K0-nK-R3X">
                                        <rect key="frame" x="0.0" y="96" width="398" height="25.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yE1-GE-t89">
                                        <rect key="frame" x="0.0" y="141.5" width="398" height="25.5"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qth-Yi-pMG">
                                        <rect key="frame" x="0.0" y="136.5" width="398" height="38"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                        <state key="normal" title="Add Photo"/>
                                        <connections>
                                            <action selector="addPhotoTapped:" destination="Iri-Ct-7Vp" eventType="touchUpInside" id="Nuo-zZ-W9b"/>
                                        </connections>
                                    </button>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2ds-uf-QWu">
                                        <rect key="frame" x="0.0" y="194.5" width="398" height="212.5"/>
...
                        <constraints>
                            <constraint firstItem="gkQ-U6-GU3" firstAttribute="trailing" secondItem="Tdi-D9-lwe" secondAttribute="trailing" constant="8" id="ArG-de-v6W"/>
                            <constraint firstItem="Tdi-D9-lwe" firstAttribute="leading" secondItem="gkQ-U6-GU3" secondAttribute="leading" constant="8" id="C5m-FF-osf"/>
                            <constraint firstItem="Tdi-D9-lwe" firstAttribute="top" secondItem="gkQ-U6-GU3" secondAttribute="top" constant="8" id="whj-Vq-pRb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add New Plant" id="qFB-8r-TI5">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="s8y-cr-dPh">
                            <connections>
                                <action selector="cancelTapped:" destination="Iri-Ct-7Vp" id="lfv-yj-15s"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="U2G-N7-xGA">
...
